0.13.2/_sources/modules/numba.txt
numba package
=============

Subpackages
-----------

.. toctree::

    numba.cuda
    numba.ext
    numba.npyufunc
    numba.pycc
    numba.servicelib
    numba.targets
    numba.tests
    numba.typeconv
    numba.typing

Submodules
----------

numba.assume module
-------------------

.. automodule:: numba.assume
    :members:
    :undoc-members:
    :show-inheritance:

numba.bytecode module
---------------------

.. automodule:: numba.bytecode
    :members:
    :undoc-members:
    :show-inheritance:

numba.callwrapper module
------------------------

.. automodule:: numba.callwrapper
    :members:
    :undoc-members:
    :show-inheritance:

numba.cffi_support module
-------------------------

.. automodule:: numba.cffi_support
    :members:
    :undoc-members:
    :show-inheritance:

numba.cgutils module
--------------------

.. automodule:: numba.cgutils
    :members:
    :undoc-members:
    :show-inheritance:

numba.compiler module
---------------------

.. automodule:: numba.compiler
    :members:
    :undoc-members:
    :show-inheritance:

numba.config module
-------------------

.. automodule:: numba.config
    :members:
    :undoc-members:
    :show-inheritance:

numba.controlflow module
------------------------

.. automodule:: numba.controlflow
    :members:
    :undoc-members:
    :show-inheritance:

numba.ctypes_support module
---------------------------

.. automodule:: numba.ctypes_support
    :members:
    :undoc-members:
    :show-inheritance:

numba.ctypes_utils module
-------------------------

.. automodule:: numba.ctypes_utils
    :members:
    :undoc-members:
    :show-inheritance:

numba.dataflow module
---------------------

.. automodule:: numba.dataflow
    :members:
    :undoc-members:
    :show-inheritance:

numba.decorators module
-----------------------

.. automodule:: numba.decorators
    :members:
    :undoc-members:
    :show-inheritance:

numba.dispatcher module
-----------------------

.. automodule:: numba.dispatcher
    :members:
    :undoc-members:
    :show-inheritance:

numba.dummyarray module
-----------------------

.. automodule:: numba.dummyarray
    :members:
    :undoc-members:
    :show-inheritance:

numba.errcode module
--------------------

.. automodule:: numba.errcode
    :members:
    :undoc-members:
    :show-inheritance:

numba.findlib module
--------------------

.. automodule:: numba.findlib
    :members:
    :undoc-members:
    :show-inheritance:

numba.interpreter module
------------------------

.. automodule:: numba.interpreter
    :members:
    :undoc-members:
    :show-inheritance:

numba.io_support module
-----------------------

.. automodule:: numba.io_support
    :members:
    :undoc-members:
    :show-inheritance:

numba.ir module
---------------

.. automodule:: numba.ir
    :members:
    :undoc-members:
    :show-inheritance:

numba.irpasses module
---------------------

.. automodule:: numba.irpasses
    :members:
    :undoc-members:
    :show-inheritance:

numba.looplifting module
------------------------

.. automodule:: numba.looplifting
    :members:
    :undoc-members:
    :show-inheritance:

numba.lowering module
---------------------

.. automodule:: numba.lowering
    :members:
    :undoc-members:
    :show-inheritance:

numba.macro module
------------------

.. automodule:: numba.macro
    :members:
    :undoc-members:
    :show-inheritance:

numba.numpy_support module
--------------------------

.. automodule:: numba.numpy_support
    :members:
    :undoc-members:
    :show-inheritance:

numba.pythonapi module
----------------------

.. automodule:: numba.pythonapi
    :members:
    :undoc-members:
    :show-inheritance:

numba.sigutils module
---------------------

.. automodule:: numba.sigutils
    :members:
    :undoc-members:
    :show-inheritance:

numba.special module
--------------------

.. automodule:: numba.special
    :members:
    :undoc-members:
    :show-inheritance:

numba.testing module
--------------------

.. automodule:: numba.testing
    :members:
    :undoc-members:
    :show-inheritance:

numba.type_annotations module
-----------------------------

.. automodule:: numba.type_annotations
    :members:
    :undoc-members:
    :show-inheritance:

numba.typeinfer module
----------------------

.. automodule:: numba.typeinfer
    :members:
    :undoc-members:
    :show-inheritance:

numba.types module
------------------

.. automodule:: numba.types
    :members:
    :undoc-members:
    :show-inheritance:

numba.unittest_support module
-----------------------------

.. automodule:: numba.unittest_support
    :members:
    :undoc-members:
    :show-inheritance:

numba.utils module
------------------

.. automodule:: numba.utils
    :members:
    :undoc-members:
    :show-inheritance:


Module contents
---------------

.. automodule:: numba
    :members:
    :undoc-members:
    :show-inheritance:
